iris-deployment-final.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f iris-compose.yaml
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: iris
  name: iris
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: iris
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f iris-compose.yaml
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: iris
    spec:
      containers:
      - env:
        - name: ISC_DATA_DIRECTORY
          value: /durable
        image: store/intersystems/iris-community:2020.1.0.215.0
        imagePullPolicy: ""
        name: my-iris
        # command: ["iris"]
        # command: ["/iris-main"]
        # args: ["session", "IRIS"]
        ports:
        - containerPort: 52773
        - containerPort: 51773
        resources: {}
        volumeMounts:
        - mountPath: /durable
          name: iris-claim0
      restartPolicy: Always
      serviceAccountName: "useroot"
      volumes:
      - name: iris-claim0
        persistentVolumeClaim:
          claimName: iris-claim0
status: {}
