iris-route-final.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    io.kompose.service: iris
  name: iris
spec:
  port:
    targetPort: "9092"
  to:
    kind: Service
    name: iris
    weight: 100
  wildcardPolicy: None
